--- a/Web/css/dashboard.css
+++ b/Web/css/dashboard.css
@@ -6,12 +6,13 @@
 
 .dashboardContents {
 	padding: 4px;
-	background-color: #E6E6DC;
+	background-color: #eeeeee;
 }
 
 .dashboardHeader {
-    background-color: #CCCC99;
-    border-bottom: solid 1px #666633;
+    background-color: #5e5d60;
+    border-bottom: solid 1px #cccccc;
+	color: #ffffff;
     font-size: 12px;
     font-weight: bold;
     padding: 2px 0px 2px 10px;
@@ -24,7 +25,7 @@
 
 .dashboardHeader a
 {
-	color: #0F3B5F;
+	color: #ffffff;
 }
 
 .dashboard .noresults {
@@ -42,7 +43,7 @@
 }
 
 .dashboardContents table, .dashboardContents table td, .dashboardContents table th {
-	border: solid 1px #CCCC99;
+	border: solid 1px #5e5d60;
 	text-align: left;
 	padding: 4px;
 	background-color: #F5F5F5;
