Changed color of 'My Reservation"

--- a/Web/css/schedule.css
+++ b/Web/css/schedule.css
@@ -84,7 +84,7 @@ td.reserved.hilite {
 }
 
 td.reserved.mine, div.reserved.mine {
-	background-color: #6F9BAE;
+	background-color: #FE2E2E;
 }
 
 td.reserved.mine.hilite {
